[BE-4] message overhaul, use of Request objects and CLI command overhaul (WIP)